--- a/app/views/doorkeeper/authorizations/error.html.erb
+++ b/app/views/doorkeeper/authorizations/error.html.erb
@@ -1,7 +1,8 @@
-<div class="page-header">
-  <h1><%= t('doorkeeper.authorizations.error.title') %></h1>
-</div>
+<h2 class="ui center aligned icon header">
+  <i class="circular red warning icon"></i>
+  <%= t('.title') %>
+</h2>
 
-<main role="main">
+<div class="ui segment">
   <pre><%= @pre_auth.error_response.body[:error_description] %></pre>
-</main>
+</div>
