--- a/app/views/doorkeeper/authorizations/show.html.erb
+++ b/app/views/doorkeeper/authorizations/show.html.erb
@@ -1,7 +1,8 @@
-<header class="page-header">
-  <h1><%= t('.title') %>:</h1>
-</header>
+<h2 class="ui center aligned icon header">
+  <i class="circular code icon"></i>
+  <%= t('.title') %>
+</h2>
 
-<main role="main">
-  <code id="authorization_code"><%= params[:code] %></code>
-</main>
+<div class="ui segment">
+  <code><%= params[:code] %></code>
+</div>
