--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -49,7 +49,7 @@
             <%=t '.reply' %>
           </a>
           <%= link_to t('.delete'), [@topic, comment], method: :delete,
-            data: { confirm: t('.delete_confirm') }, class:'delete' if is_admin? %>
+            data: { confirm: t('.delete_confirm') }, class:'delete' if current_user.admin? %>
         </div>
         <% if comment.replies.size > 0 %>
           <div class="comments">
@@ -72,7 +72,7 @@
                     </a>
                     <%= link_to t('.delete'), [@topic, reply], method: :delete,
                           data: { confirm: t('.delete_confirm') },
-                          class:'delete' if is_admin? %>
+                          class:'delete' if current_user.admin? %>
                   </div>
                 </div>
               </div>
