Upgrade to rails 5.1
Update other gems to be compatible with rails 5.

--- a/app/assets/javascripts/editor.js.coffee.erb
+++ b/app/assets/javascripts/editor.js.coffee.erb
@@ -2,7 +2,7 @@ $(document).on 'ready page:load', ->
   # Initialize Simditor
   textarea = $('.editor')
   if textarea.length > 0
-    Simditor.locale = $.cookie 'locale'
+    Simditor.locale = Cookies.get 'locale'
     editor = new Simditor(
       textarea: textarea
       toolbar: [
