--- a/app/assets/javascripts/editor.js.coffee.erb
+++ b/app/assets/javascripts/editor.js.coffee.erb
@@ -1,4 +1,4 @@
-$(document).on 'ready page:load', ->
+$(document).on 'turbolinks:load', ->
   # Initialize Simditor
   textarea = $('.editor')
   if textarea.length > 0
