--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="initial-scale=0.5,user-scalable=no">
-  <title>RTISS</title>
+  <title>Natty</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
