--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -24,10 +24,10 @@
     <% unless signed_in? %>
     <div class="right menu">
       <div class="item">
-        <%= link_to t('sessions.new.signin'), signin_path, class:'ui blue button' %>
+        <%= link_to t('sessions.new.signin'), new_user_session_path, class:'ui blue button' %>
       </div>
       <div class="item">
-        <%= link_to t('sessions.new.apply'), new_user_path, class:'ui green button' %>
+        <%= link_to t('sessions.new.apply'), new_user_registration_path, class:'ui green button' %>
       </div>
     </div>
     <% end %>
