--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
           class:'item', 'data-content' => t('menu.settings') do %>
         <i class="settings icon"></i>
       <% end %>
-      <%= link_to signout_path, method: :delete,
+      <%= link_to destroy_user_session_path, method: :delete,
           class:'item', 'data-content' => t('menu.signout') do %>
         <i class="sign out icon"></i>
       <% end %>
