--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
 <% end %>
-<%= form_for @topic, html: { class: 'ui form segment' } do |f| %>
+<%= form_for [@forum, @topic], html: { class: 'ui form segment' } do |f| %>
   <div class="field">
     <%= f.label :title, t('.title') %>
     <%= f.text_field :title %>
@@ -33,5 +33,5 @@
     </div>
   </div>
   <%= f.submit t('.submit'), class:"ui blue button" %>
-  <%= link_to t('.cancel'), topics_path, class:"ui button" %>
+  <%= link_to t('.cancel'), forum_topics_path(@forum), class:"ui button" %>
 <% end %>
