--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,19 @@
-<h2>Forgot your password?</h2>
+<h2 class="ui center aligned icon header">
+  <i class="circular lock icon"></i>
+  <%= t '.forgot_password' %>
+</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<% if flash[:error] %>
+  <div class="ui icon error message">
+    <i class="attention circle icon"></i>
+    <div class="content">
+      <p><%= flash[:error] %></p>
+    </div>
+  </div>
+<% end %>
+
+<%= form_for(resource, as: resource_name, url: password_path(resource_name),
+    html: { method: :post, class:'ui form segment'}) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -8,9 +21,7 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+  <%= f.submit t('.submit'), class: "fluid ui blue button" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
