--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
-<div class="ui stackable grid">
+<div class="ui grid">
   <div class="ten wide column">
     <div class="ui segment">
       <div class="ui blue header">
-        <i class="envelope icon"></i>
         <div class="content"><%=t 'module.messages' %></div>
       </div>
 
@@ -23,7 +22,6 @@
   <div class="six wide column">
     <div class="ui segment">
       <div class="ui blue header">
-        <i class="calendar icon"></i>
         <div class="content"><%=t 'module.schedule' %></div>
       </div>
       <div class="ui divider"></div>
@@ -47,57 +45,6 @@
             </div>
           <% end %>
         </div>
-      <% end %>
-    </div>
-
-    <div class="ui segment">
-      <div class="ui blue header">
-        <i class="briefcase icon"></i>
-        <div class="content"><%=t 'module.meetings' %></div>
-      </div>
-      <div class="ui divider"></div>
-      <% if @meetings.count == 0 %>
-        <p><%=t '.meetings.none' %></p>
-      <% elsif @meetings.count == 1 %>
-        <p><%= link_to t('.meetings.only_one'), meetings_path %></p>
-      <% else %>
-        <p><%= link_to t('.meetings.more_than_one',{number: @meetings.count}), meetings_path %></p>
-      <% end %>
-      <% if @meetings.count > 0 %>
-        <div class="ui divided list">
-          <% @meetings.each do |meeting| %>
-            <div class="item">
-              <div class="content">
-                <%= link_to meeting.title, meeting, class:'header' %>
-                <%= t '.meetings.info', { starts_at: (l meeting.starts_at, :format=>:long),
-                  ends_at:(l meeting.ends_at, :format=>:long),
-                  place: meeting.place } %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-
-    <div class="ui segment">
-      <div class="ui blue header">
-        <i class="newspaper icon"></i>
-        <div class="content"><%=t 'module.news' %></div>
-      </div>
-      <div class="ui divider"></div>
-      <% if @news.count > 0 %>
-        <div class="ui divided selection list">
-          <% @news.each do |item| %>
-            <%= link_to item, class: 'item' do %>
-              <div class="ui horizontal label">
-                <%=l item.created_at, format: :short %>
-              </div>
-              <%= item.title %>
-            <% end %>
-          <% end %>
-        </div>
-      <% else %>
-        <p><%=t '.news.none' %></p>
       <% end %>
     </div>
   </div>
