--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,23 +1,23 @@
-<div class="ui vertical segment">
-  <h2 class="ui header">
-    <i class="circular inverted blue cube icon"></i>
-    <div class="content">
-      <%=t 'module.instruments' %>
+<div class="ui secondary menu">
+  <div class="item">
+    <div class="ui huge breadcrumb">
+      <a class="section"><%=t 'module.instruments' %></a>
+      <i class="right angle icon divider"></i>
+      <div class="active section">List</div>
     </div>
-  </h2>
-  <%= form_tag instruments_path, method:'GET', class:"ui form" do %>
-    <div class="inline fields">
-      <div class="field">
+  </div>
+  <div class="right menu">
+    <%= link_to new_instrument_path, class:"item" do %>
+      <i class="plus icon"></i><%=t '.new' %>
+    <% end if can? :create, Instrument %>
+
+    <%= form_tag instruments_path, method:'GET', class:"item" do %>
+      <div class="ui icon input">
         <%= text_field_tag :search, params[:search], placeholder:t('.search') %>
+        <i class="search link icon"></i>
       </div>
-      <div class="field">
-        <%= submit_tag t('.search'), class:"ui blue button" %>
-      </div>
-    </div>
-  <% end %>
-  <%= link_to new_instrument_path, class:"ui green labeled icon button" do %>
-    <i class="plus icon"></i><%=t '.new' %>
-  <% end if can? :create, Instrument %>
+    <% end %>
+  </div>
 </div>
 
 <table class="ui table segment">
