--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,24 +1,22 @@
+<div class="ui secondary menu">
+  <div class="item">
+    <div class="ui huge breadcrumb">
+      <a class="section"><%=t 'module.schedule' %></a>
+      <i class="right angle icon divider"></i>
+      <div class="active section">List</div>
+    </div>
+  </div>
+  <div class="right menu">
+    <%= link_to new_schedule_path, class:"item" do %>
+      <i class="plus icon"></i><%=t '.new' %>
+    <% end if can? :create, Schedule %>
 
-<div class="ui vertical segment">
-  <h2 class="ui header">
-    <i class="circular inverted blue calendar icon"></i>
-    <div class="content">
-      <%=t 'module.schedule' %>
-    </div>
-  </h2>
-  <%= form_tag schedules_path, method:'GET', class:"ui form" do %>
-    <div class="inline fields">
-      <div class="field">
-        <%= select_tag :user,
-              options_for_select(User.pluck(:name,:id),[@user.name,@user.id]),
-              class:'ui search dropdown' %>
-      </div>
-      <%= submit_tag t('.search'), class:"ui blue button" %>
-    </div>
-  <% end %>
-  <%= link_to new_schedule_path, class:"ui green labeled icon button" do %>
-    <i class="plus icon"></i><%=t '.new' %>
-  <% end %>
+    <%= form_tag schedules_path, method:'GET', class:"item" do %>
+      <%= select_tag :user,
+            options_for_select(User.pluck(:name,:id),[@user.name,@user.id]),
+            class:'ui search dropdown' %>
+    <% end %>
+  </div>
 </div>
 
 <div class="ui vertical segment calendar">
