--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,23 +1,25 @@
-<div class="ui vertical segment">
-  <h2 class="ui header">
-    <i class="circular inverted blue comments icon"></i>
-    <div class="content">
-      <%=t 'module.topics' %>
+<div class="ui secondary menu">
+  <div class="item">
+    <div class="ui huge breadcrumb">
+      <%= link_to t('module.topics'), forums_path, class:"section" %>
+      <i class="right angle icon divider"></i>
+      <%= link_to @forum.name, forum_topics_path(@forum), class:"section" %>
+      <i class="right angle icon divider"></i>
+      <div class="active section">Topics</div>
     </div>
-  </h2>
-  <%= form_tag topics_path, method:'GET', class:"ui floated right form" do %>
-    <div class="inline fields">
-      <div class="field">
+  </div>
+  <div class="right menu">
+    <%= link_to new_forum_topic_path, class:"item" do %>
+      <i class="plus icon"></i><%=t '.new' %>
+    <% end if can? :create, Topic %>
+
+    <%= form_tag forum_topics_path, method:'GET', class:"item" do %>
+      <div class="ui icon input">
         <%= text_field_tag :search, params[:search], placeholder:t('.search') %>
+        <i class="search link icon"></i>
       </div>
-      <div class="field">
-        <%= submit_tag t('.search'), class:"ui blue button" %>
-      </div>
-    </div>
-  <% end %>
-  <%= link_to new_topic_path, class:"ui green labeled icon button" do %>
-    <i class="plus icon"></i><%=t '.new' %>
-  <% end if can? :create, Topic %>
+    <% end %>
+  </div>
 </div>
 
 <table class="ui table segment">
