--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,13 +1,13 @@
-<div class="ui vertical segment">
-  <div class="ui header">
+<div class="ui secondary menu">
+  <div class="item">
     <div class="ui huge breadcrumb">
-      <%= link_to topics_path, class:'section' do %>
-        <i class="blue comments icon"></i>
-        <%=t 'module.topics' %>
-      <% end %>
-      <i class="right chevron icon divider"></i>
+      <%= link_to t('module.topics'), forums_path, class:"section" %>
+      <i class="right angle icon divider"></i>
+      <%= link_to @forum.name, forum_topics_path(@forum), class:"section" %>
+      <i class="right angle icon divider"></i>
       <div class="active section"><%=t '.new' %></div>
     </div>
   </div>
 </div>
+
 <%= render 'form' %>
