--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,10 @@
-<div class="ui vertical segment">
-  <div class="ui header">
+<div class="ui secondary menu">
+  <div class="item">
     <div class="ui huge breadcrumb">
-      <%= link_to topics_path, class:'section' do %>
-        <i class="blue comments icon"></i>
-        <%=t 'module.topics' %>
-      <% end %>
-      <i class="right chevron icon divider"></i>
+      <%= link_to t('module.topics'), forums_path, class:"section" %>
+      <i class="right angle icon divider"></i>
+      <%= link_to @topic.forum.name, forum_topics_path(@topic.forum), class:"section" %>
+      <i class="right angle icon divider"></i>
       <div class="active section"><%= @topic.title %></div>
     </div>
   </div>
@@ -19,7 +18,7 @@
   </div>
   <div class="ui label"><%=l @topic.updated_at,:format=>:long %></div>
   <% if @topic.tags %>
-    <% @topic.tags.each do |tag| %>
+    <% @topic.tags.split('/').each do |tag| %>
       <div class="ui label">
         <%= tag %>
       </div>
