--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -22,7 +22,7 @@
 
 <div class="ui hidden divider"></div>
 
-<div class="ui cards">
+<div class="ui four stackable cards">
   <% @instruments.each do |instrument| %>
     <div class="card">
       <div class="content">
