--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -19,8 +19,8 @@
 
 <table class="ui definition table">
   <thead>
-    <tr><th></th>
-    <th>Description</th>
+    <tr><th class="two wide"></th>
+    <th class="fourteen wide">Description</th>
   </tr></thead>
   <tbody>
     <tr>
