--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="initial-scale=0.5,user-scalable=no">
   <title>Natty</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
   <%= yield :head %>
   <%= csrf_meta_tags %>
 </head>
@@ -63,17 +63,20 @@
     </div>
 
 
+    <% if notice %>
+      <div class="ui center aligned container top-fixed-message">
+        <div class="ui text container">
+          <div class="ui blue message">
+            <i class="close icon"></i>
+            <%=raw notice %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
     <!-- main -->
     <div class="ui container">
-      <% if notice %>
-        <div class="ui blue message">
-          <i class="close icon"></i>
-          <%=raw notice %>
-        </div>
-      <% end %>
-
       <%= yield %>
-
     </div>
   </div>
 </body>
