--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -21,8 +21,12 @@
               </div>
             </div>
           </div>
-          <%= image_tag @profile.photo.url(:small) %>
-        </div>
+          <% if @profile.photo.attached? %>
+            <%= image_tag @profile.photo.variant(resize: "300x300") %>
+          <% else %>
+            <%= image_tag 'default/user/photo/small/missing.png' %>
+          <% end %>
+          </div>
         <div class="content">
           <div class="header"><%= @profile.user.name %></div>
           <div class="meta">
