--- a/app/views/settings/avatars/edit.html.erb
+++ b/app/views/settings/avatars/edit.html.erb
@@ -24,7 +24,11 @@
 
   <div class="field">
     <%= f.label :avatar, t('.avatar') %>
-    <%= image_tag current_user.avatar.url(:thumb), class:'ui avatar image' %>
+    <% if current_user.avatar.attached? %>
+      <%= image_tag current_user.avatar.variant(resize: "100x100"), class: 'ui avatar image' %>
+    <% else %>
+      <%= image_tag 'default/user/avatar/thumb/missing.png', class: 'ui avatar image'%>
+    <% end %>
     <div class="ui hidden divider"></div>
     <%= f.file_field :avatar %>
   </div>
